[gd_scene load_steps=6 format=3 uid="uid://dtvi2mpnb1qan"]

[ext_resource type="Script" path="res://Components/Items/Item/Item.gd" id="1_twuw4"]
[ext_resource type="Texture2D" uid="uid://r7npudytwdhj" path="res://Components/Items/Item/Assets/item.png" id="1_vms63"]
[ext_resource type="AudioStream" uid="uid://bipyxo60qvc1v" path="res://Components/Items/Item/Assets/magical_6.ogg" id="2_cfc17"]
[ext_resource type="AudioStream" uid="uid://bio1mrf2tsvb6" path="res://Components/Items/Item/Assets/zap2.ogg" id="3_g4qfv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1k88q"]
radius = 25.0

[node name="Item" type="Area2D" groups=["item"]]
script = ExtResource("1_twuw4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -3)
shape = SubResource("CircleShape2D_1k88q")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, -4)
scale = Vector2(0.02, 0.02)
texture = ExtResource("1_vms63")

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_cfc17")
volume_db = 2.255

[node name="DestroySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_g4qfv")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
